--- a/src/components/Editable.css
+++ b/src/components/Editable.css
@@ -28,6 +28,10 @@
   --pad: 4px;
 }
 
+.Editable.Editable_shade {
+  background-color: var(--color-shade);
+}
+
 .Editable_textarea {
   resize: none;
   line-height: 1.25em;
