--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  margin-bottom: -1.5em;
 
   color: var(--color-shade-dark);
   text-decoration-color: var(--color-shade-dark);
