--- a/src/components/Editable.css
+++ b/src/components/Editable.css
@@ -38,12 +38,19 @@
 
 .Editable_textarea {
   resize: none;
-  line-height: 1.25em;
+  line-height: 1.4em;
   overflow: hidden;
   display: block;
   padding-bottom: 20px;
   border: 1px solid var(--color-shade);
   margin-bottom: var(--offset);
+}
+
+@media print {
+  .Editable_textarea {
+    text-align: justify;
+    line-height: 1.5em;
+  }
 }
 
 .Editable:focus {
