--- a/src/pages/ListPage.css
+++ b/src/pages/ListPage.css
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+@media print {
+  .ListPage_filter-bar {
+    display: none;
+  }
+}
+
 .ListPage_filter {
   margin-left: 10px;
   border: none;
