--- a/src/pages/EssayPage.css
+++ b/src/pages/EssayPage.css
@@ -10,6 +10,13 @@
   margin-bottom: 10px;
 }
 
+.EssayPage_lint-results {
+  margin-top: 0;
+  padding: 1em;
+  border: 1px solid var(--color-shade);
+  border-radius: 5px;
+}
+
 @media print {
   .EssayPage {
     margin-bottom: 0;
