--- a/src/pages/ListPage.css
+++ b/src/pages/ListPage.css
@@ -46,5 +46,17 @@
 .ListPage_item p {
   height: 5em;
   overflow: hidden;
+  margin-bottom: 0;
   mask-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.2) 20%, black 60%, black);
+}
+
+.ListPage_enter-to-open {
+  opacity: 0.3;
+  margin-top: 0.2em;
+  margin-bottom: 0.5em;
+  margin-left: 0.5em;
+}
+
+.ListPage_enter-to-open svg {
+  margin-right: 15px;
 }
